# ASCON-Chisel

./: .gitmodules  CMakeLists.txt  README.md
script/: initvalue.py
src/main/scala/: AXI4.scala  ascon.scala  pemuation.scala
src/test/cpp/: CMakeLists.txt  cpptest.cpp  crypto_hash.h
